--- a/lib/views/frontend/spree/user_mailer/reset_password_instructions.text.erb
+++ b/lib/views/frontend/spree/user_mailer/reset_password_instructions.text.erb
@@ -1,5 +1,5 @@
-<%= I18n.t('devise.mailer.password_reset.block1') %>
+<%= I18n.t('devise.mailer.password_reset_mail.block1') %>
 
 <%= @edit_password_reset_url %>
 
-<%= I18n.t('devise.mailer.password_reset.block2') %>
+<%= I18n.t('devise.mailer.password_reset_mail.block2') %>
